[project]
name = "langgraph-learning"
version = "0.1.0"
description = "LangGraph samples and patterns for learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alejandro Pereira" }
]
keywords = ["langchain", "langgraph", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=1.0,<2.0",
    "langgraph>=0.2,<2.0",
    "langchain-openai>=0.2,<2.0",
    "langchain-anthropic>=0.3,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typing"},
]

lint = [
    "ruff>=0.9,<1.0",
]

test = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "pytest-cov>=6.0,<7.0",
]

typing = [
    "mypy>=1.13,<2.0",
]

# =============================================================================
# UV WORKSPACE CONFIGURATION
# =============================================================================
[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
shared = { workspace = true }

# =============================================================================
# RUFF - Linting & Formatting Configuration
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
src = ["packages", "tests"]

exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "notebooks",
]

[tool.ruff.lint]
select = [
    # Core Python
    "F",      # Pyflakes - errors, undefined names, unused imports
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings

    # Import Management
    "I",      # isort - import sorting
    "TID",    # flake8-tidy-imports
    "ICN",    # flake8-import-conventions

    # Code Quality
    "B",      # flake8-bugbear - common bugs
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "PERF",   # Perflint - performance
    "FURB",   # refurb - code modernization
    "FLY",    # flynt - f-string conversion

    # Type Hints
    "ANN",    # flake8-annotations
    "TC",     # flake8-type-checking
    "FA",     # flake8-future-annotations

    # Documentation
    "D",      # pydocstyle

    # Security
    "S",      # flake8-bandit
    "DTZ",    # flake8-datetimez - timezone-aware datetime

    # Modern Python
    "UP",     # pyupgrade - modern syntax
    "PTH",    # flake8-use-pathlib

    # Async
    "ASYNC",  # flake8-async

    # Error Handling
    "TRY",    # tryceratops
    "EM",     # flake8-errmsg
    "RSE",    # flake8-raise

    # Testing
    "PT",     # flake8-pytest-style

    # Naming
    "N",      # pep8-naming

    # Logging
    "G",      # flake8-logging-format
    "LOG",    # flake8-logging

    # Code Style
    "FBT",    # flake8-boolean-trap
    "SLF",    # flake8-self - private member access
    "SLOT",   # flake8-slots

    # Miscellaneous
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint subset
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",     # Line too long (handled by formatter)
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D107",     # Missing docstring in __init__
    "ANN401",   # Dynamically typed expressions (Any)
    "TRY003",   # Long messages outside exception class
    "S101",     # Assert detected (fine in tests)
    "COM812",   # Missing trailing comma (conflicts with formatter)
    "ISC001",   # Implicit string concat (conflicts with formatter)
    "PLR0913",  # Too many arguments
]

fixable = ["ALL"]
unfixable = ["F401", "F841", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S101", "PLR2004", "ARG", "FBT", "SLF"]
"__init__.py" = ["F401", "D104"]
"packages/**/main.py" = ["T20"]
"notebooks/**/*.py" = ["D", "T20", "E501", "ANN"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["shared", "p01_basic_graph", "p02_conditional_edges", "p03_human_in_loop", "p04_react_agent", "p05_multi_agent"]
known-third-party = ["langchain", "langgraph", "pydantic"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# MyPy - Type Checking Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langchain.*", "langgraph.*", "langchain_openai.*", "langchain_anthropic.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (requires API keys)",
    "local: marks tests that can run locally",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["packages"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
